@@ -19,12 +19,12 @@ THIRD=`BASE_REVISION`
 AT_CHECK(MONOTONE cert $FIRST testcert 'value=with=equal=signs')
 AT_CHECK(MONOTONE cert $SECOND testcert 'value')
 
-# Check that a log with no h: fails...
+# Check that a log with no H: fails...
 AT_CHECK(MONOTONE log --revision 'c:testcert', [1], [ignore], [stderr])
 AT_CHECK(grep 'has multiple ambiguous expansions' stderr, [0], [ignore])
 
-# Check that a log with h: succeeds...
-AT_CHECK(MONOTONE log --revision='h:c:testcert', [], [stdout], [ignore])
+# Check that a log with H: succeeds...
+AT_CHECK(MONOTONE log --revision='H:c:testcert', [], [stdout], [ignore])
 # Note that if the third revision is in the log, something else is wrong...
 # There is really no case for this last test, just paranoia.
 AT_CHECK(grep $THIRD stdout, [1], [ignore], [ignore])
